force-app/main/default/objects/EventInterviewSchedule__c/EventInterviewSchedule__c.object-meta.xml
<CustomObject>
    <label>Event Interview Schedule</label>
    <nameField>
        <label>Event Interview Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Interview Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>