force-app/main/default/objects/EventInterviewSchedule__c/fields/Hiring_Panel_Member__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Panel_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hiring Panel Member</label>
    <referenceTo>HiringPanelMember__c</referenceTo>
    <relationshipLabel>Event Interview Schedules</relationshipLabel>
    <relationshipName>EventInterviewSchedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>