force-app/main/default/objects/EventInterviewSchedule__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipName>EventInterviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>