force-app/main/default/objects/EventInterviewSchedule__c/fields/Interview_Event__c.field-meta.xml
<CustomField>
    <fullName>Interview_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview Event</label>
    <referenceTo>InterviewEvent__c</referenceTo>
    <relationshipName>EventInterviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>