force-app/main/default/objects/EventInterviewSchedule__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <formula>Hiring_Panel_Member__r.User_Name__c</formula>
    <label>Interviewer Name</label>
    <type>Text</type>
</CustomField>