force-app/main/default/objects/EventInterviewSchedule__c/fields/Panel_Member_Grade__c.field-meta.xml
<CustomField>
    <fullName>Panel_Member_Grade__c</fullName>
    <label>Panel Member Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Level</valueSetName>
    </valueSet>
</CustomField>